# MDF

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ABCD.json  ABCD.py  Arrays.json  Arrays.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_GUIDELINE.md  LICENSE  MDF.py  ParametersFunctions.json  README.md  Second_assignment_outreachy.ipynb  Simple.json  Simple.py  SimpleScheduler.py  States.json  States.yaml  install_on_osbv2.sh  medium_test.json  medium_test.yaml  pyproject.toml  pytest.ini  pytorch_to_MDF.ipynb  requirements.txt  setup.cfg  setup.md  setup.py  small_test.json  small_test.yaml  test.json  test_all.sh  utils.py
.github/workflows/: ci.yml  ci_test_all.yml
Node_struct/: AG  AG.json  AG.yaml  Sample_structure.ipynb  conditions
Outreachy_Modeci_Projects/: README. md  readme. md
Outreachy_Modeci_Projects/First_task/: AB  README. md  model_json_file  model_yaml_file  readme. md
Outreachy_Modeci_Projects/Preliminary_task/: README. md  readme. md  summary_documentation.ipynb
Outreachy_Modeci_Projects/Second_task/: README. md
Outreachy_application/: README.md
Outreachy_application/Keras_to_mdf_using_Iris_data_set/: Incase_of_troubles_running_mdf_to_kera.ipynb  keras_to_mdf  keras_to_mdf.ipynb  keras_to_mdf.json  keras_to_mdf.yaml  model.h5  train_keras_with_iris_data.ipynb
Outreachy_application/ModeCEI_task_1/: README.md
Outreachy_application/SimpleExample_task/: Distance_traveled  Distance_traveled_per_rotation  SimpleExample.ipynb  Time_taken_per_rotation  example  my_model.json  my_model.yaml
Outreachy_contributions/: README.md
Outreachy_contributions/First_task/: First Task.ipynb  README.md
Outreachy_contributions/Installation/: README.md  requirement310.txt  requirement311  requirement37  requirement38  requirement39
Outreachy_contributions/Second_task/: README.md  keras2mdf.py
Outrechy_contributions/Installation/: requirement311  requirement37
demo/: Model.json  ModelGraph.py
docs/: MDF_function_specifications.json  MDF_function_specifications.md  MDF_function_specifications.yaml  MDF_specification.json  MDF_specification.yaml  README.md  contributors.py  generate.py
docs/sphinx/: README.md  requirements.txt
examples/: ABCD.json  ABCD.nmllite.json  ABCD.py  ABCD.yaml  ABCD_torch.py  Arrays.json  Arrays.yaml  Newton_Law_of_Cooling.ipynb  README.md  Sample_structure.ipynb  Simple.json  Simple.nmllite.json  Simple.py  Simple.yaml  SimpleExample.ipynb  States.json  States.yaml  abc_conditions.json  abc_conditions.py  abc_conditions.yaml  abcd.py  abcd_python.py  abcd_torch.py  arrays.py  contribExample.ipynb  inception.py  leaky_competing_accumulator.yaml  psyneulink_lca.py  pytorch_ddm.py  pytorch_lca.py  scaling.py  simple.py  states.py
examples/ACT-R/: README.md  addition.json  addition.lisp  addition.py  addition.yaml  count.json  count.lisp  count.py  count.yaml  create_examples.py  run_example.py  run_examples.py
examples/Initial_Task_Outreachy/: MyModel.json  MyModel.yaml  book_recommendation_graph.json  book_recommendation_graph.yaml  brd  conditions  conditions_based  states
examples/MDF/: ABCD.json  ABCD.mdf.json  ABCD.nmllite.json  ABCD.yaml  Arrays.json  Arrays.yaml  FN.mdf.json  New_Stateful_Parameters.nmllite.json  New_Stateful_Parameters_FN.nmllite.json  New_Stateful_Parameters_ver2.json  New_Stateful_Parameters_ver2.nmllite.json  NewtonCoolingModel.json  NewtonCoolingModel.yaml  Newton_Law_of_Cooling.ipynb  ParametersFunctions.json  ParametersFunctions.yaml  README.md  Simple.bson  Simple.json  Simple.nmllite.json  Simple.yaml  SimpleExample.ipynb  States.json  States.yaml  SwitchedRLC_Circuit.json  SwitchedRLC_Circuit.yaml  Translated_ABCD.json  Translated_States.json  Translated_sample_test.json  abc_conditions.json  abc_conditions.py  abc_conditions.yaml  abcd.py  abcd_python.py  abcd_torch.py  arc_functions.py  arrays.py  model_conversion.py  newton.py  params_funcs.py  (+21 more)
examples/MDF_to_ONNX/: README.md  ab-m2o.onnx  ab.json
examples/NeuroML/: ABCD.bids-mdf.json  ABCD.json  ABCD.mdf.json  ABCD.mdf.yaml  ABCD.net.nml  ABCD.py  ABCD__lems.xml  FN.bids-mdf.json  FN.json  FN.mdf.json  FN.mdf.yaml  FN.net.nml  FN.py  FN_Definitions.xml  FN__lems.xml  FN_extends.mdf.yaml  FN_extends_run.py  FNrun.py  Izh_run.py  Izhikevich.py  IzhikevichTest.mdf.json  IzhikevichTest.mdf.yaml  IzhikevichTest.net.nml  IzhikevichTest.nmllite.yaml  LEMS_SimABCD.xml  LEMS_SimFN.xml  LEMS_SimIzhikevichTest.xml  PNL.xml  README.md  SimABCD.json  SimFN.json  SimIzhikevichTest.yaml  regenerateAndTest.sh  run_pnl_ABCD.py  run_pnl_FN.py
examples/Notebook_Mdf_ Demo_task/: Clustered_Customer_Data.csv  Customer_Data.csv  Kmeans_model.pkl  ML_Mdeol.ipynb  ML_Model.pkl  ML_Model_MDF_Graph  ML_Model_MDF_Test.ipynb  ML_Model_Testing.json  ML_Model_Testing.yaml  ML_TO MDF_Model.json  ML_TO_MDF_Model  ML_TO_MDF_Model.yaml  final_model.csv  final_model.joblib  final_model.pth  final_model.sav  finalmodel.joblib  model_MDF.joblib
examples/ONNX/: README.md  ab.json  ab.yaml  ab_torch-jit-export-m2o.onnx  abc.json  abc.yaml  abc_basic-mdf.json  abc_basic-mdf.yaml  abc_basic.py  abcd.json  abcd.yaml  convnet_onnx_example.ipynb  simple_ab.py  simple_abc.py  simple_abcd.py
examples/Outreachy_tasks_sumbmission/: 3-connected-nodes_pytorch.py  Machine Learning workflows using MDF_Export format _ functions  Machine Learning workflows using MDF_Export format _ functions.ipynb  Machine Learning workflows using MDF_Export format _ functions.json  Machine Learning workflows using MDF_Installation.ipynb  (+8 more)
modeci_mdf/: MDF.py  SimpleScheduler.py  __init__.py  functions.py  standardfunctions.py  utils.py
outreachy_modeci_contributions/: README.md
outreachy_modeci_project/: README.md
task-I/: pytorch_model.ipynb  sample1_pytorch_to_mdf.ipynb
task-II/: keras_MDF.ipynb  keras_to_MDF1.json  keras_to_MDF1.yaml
tests/: conftest.py  test_examples.py  test_execution.py  test_helpers.py  test_mdf_functions.py  test_model.py  test_onnx_functions.py  test_parameters.py  test_scheduler.py  test_schedulers.py  test_simple_scheduler.py
(+594 files in other folders)
