[metadata]
name = modeci-mdf
version = attr: modeci_mdf.__version__
description = ModECI (Model Exchange and Convergence Initiative) Model Description Format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.modeci.org
author = Padraig Gleeson; ...
author_email = p.gleeson@gmail.com
maintainer = Padraig Gleeson; ...
maintainer_email = p.gleeson@gmail.com
license = LGPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy>=1.13.3
    dataclasses;python_version<'3.7'
    typing_extensions;python_version<'3.8'
    neuromllite
    pylems>=0.5.0
    matplotlib
    pyyaml
    graphviz
    psyneulink
    torch>=1.8.0
    sympy

python_requires = >=3.6
include_package_data = True
package_dir =
    =src


[options.packages.find]
where = src
exclude =
    tests
    examples

[tool:pytest]
junit_family = xunit2
addopts = --benchmark-disable -Wd --strict-markers
xfail_strict = True
testpaths =
    tests
required_plugins =
    pytest-benchmark

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
max-line-length = 80
max-complexity = 13
select = C, E, F, W, B, B9, T
ignore = E203, E231, E501, E722, W503, B950
per-file-ignores =
    tests/*: T
    examples/*: T
    notebooks/*: T
    docs/*: T
    scripts/*: T
    setup.py: T
    setup_helpers.py: C901

[mypy]
warn_unused_configs = True
python_version = 3.6
files = src
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[check-manifest]
ignore =
    .all-contributorsrc
    .pre-commit-config.yaml
    .readthedocs.yml
    examples/**
    notebooks/**
    docs/**
    scripts/**
    dev-requirements.txt
    CONTRIBUTING.md
    *.html
    src/modeci_mdf/version.py
    tests/.pytest_cache/**
