[metadata]
name = modeci-mdf
version = attr: modeci_mdf.__version__
description = ModECI (Model Exchange and Convergence Initiative) Model Description Format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.modeci.org
author = ModECI contributors
author_email = p.gleeson@gmail.com
maintainer = ModECI contributors
maintainer_email = p.gleeson@gmail.com
license = LGPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Typing :: Typed

[options]
packages = find:
install_requires =
    typing_compat;python_version<'3.8'
    dataclasses;python_version<'3.7'
    graph_scheduler>=1.1.1
    numpy
    matplotlib
    graphviz
    h5py
    onnxruntime
    onnx
    skl2onnx
    attrs>=21.1.0
    cattrs
    modelspec<0.4,>=0.3.0
    glom

python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.extras_require]
psyneulink =
    grpcio-tools==1.42.0
    psyneulink

neuroml =
    pyNeuroML>=1.0.10
    neuromllite>=0.5.6
    PyNN==0.10.1


tensorflow =
    tensorflow>=2.11.0
    keras_visualizer
    pydot

test =
    pytest
    pytest-benchmark
    pytest-mock
    typing_extensions;python_version<'3.8'
    setuptools

optional =
    Sphinx
    recommonmark>=0.5.0
    nbsphinx
    sphinx_copybutton
    sphinx-rtd-theme
    myst_parser
    sphinx_markdown_tables
    sphinx-autoapi
    pytorch-sphinx-theme==0.0.19
    sphinxcontrib-versioning
    Jinja2<3.1
    torchviz
    netron
    torch<2.2.0,>=1.11.0
    torchvision
    h5py

all_except_psyneulink =
    modeci-mdf[tensorflow]
    modeci-mdf[optional]
    modeci-mdf[neuroml]

all =
    modeci-mdf[all_except_psyneulink]
    modeci-mdf[psyneulink]

dev =
    modeci-mdf[test]

[options.packages.find]
where = src
exclude =
    tests
    examples


[options.package_data]
* = syn_definitions.xml

[tool:pytest]
junit_family = xunit2
addopts = --benchmark-disable -Wd --strict-markers
xfail_strict = True
testpaths =
    tests
required_plugins =
    pytest-benchmark

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
max-line-length = 80
max-complexity = 13
select = C, E, F, W, B, B9, T
ignore = E203, E231, E501, E722, W503, B950
per-file-ignores =
    tests/*: T
    examples/*: T
    notebooks/*: T
    docs/*: T
    scripts/*: T
    setup_helpers.py: C901

[mypy]
warn_unused_configs = True
python_version = 3.6
files = src
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[check-manifest]
ignore =
    .all-contributorsrc
    .pre-commit-config.yaml
    .readthedocs.yml
    examples/**
    notebooks/**
    docs/**
    scripts/**
    dev-requirements.txt
    CONTRIBUTING.md
    *.html
    src/modeci_mdf/version.py
    tests/.pytest_cache/**
